 * $obj->exists_and_set now uses has_field instead of get_field which
    should prevent the annoying warning.

2007-05-29 cjg
 * Creating eprint now returns undef if add_record fails (eg. that the id
    already exists)
 * 2 new configure options: enable_import_ids and enable_import_datestamps
 * Corrected documentation on time/date system fields in EPrints dataobjs
 * Clarified error message when (failing in) writing an item with a existing
    ID.
 * XML plugin warnings now use absolute phrase paths, so that you don't need
    to keep duplicating the same phrase for multiple plugins.
 * Added warnings to import-from-file code if the source file does not 
    exist, or if from-file imports are disabled.
 * import-from-file no longer deletes first file.
 * Added new options to import to allow correct importing of migration data.
  
2007-05-30 cjg
 * Fixed warning when pagerange met non digit data.

2007-06-05 cjg
 * Fixed bug with "dir" when importing migration data.

2007-06-05 cjg
 * Fixed stray warning when a zero byte file is added to a document.
 * Fixed some problems with importing files with "/" or " " in the title.
    When create_from_data is passed a filename then it is used as-is, but
    checks for things like ../ still.

2007-06-12 cjg
 * Fixed bug in importing eprints which gave them the wrong "dir"
 * Fixed issue when migrating items that un-needed eprintid and userid's
    got created.

2007-06-12 cjg
 * Simplified URL escape method. This fixes an issue with unknown URL schemes.

2007-06-13 cjg
 * Set all primary key fields to be can_clone=>0 (fixing bug introduced in 
    new-version by the wrong dir fix earlier)

2007-06-13 tmb
 * Added some latitude + longitude values to example data

2007-06-15 tmb
 * Fixed bug which caused URLs not to be included in text version of emails

2007-07-02 cjg/tdb
 * close-quote is now a seperating character, rather than mapping to quote.
    this should fix bug #3048
