@@ -978,7 +978,7 @@ sub validate
 	# get the workflow
 
 	my %opts = ( item=> $self, session=>$self->{session} );
-	if( $for_archive ) { $opts{STAFF_ONLY} = ["TRUE","BOOLEAN"]; }
+	$opts{STAFF_ONLY} = [$for_archive ? "TRUE" : "FALSE","BOOLEAN"];
  	my $workflow = EPrints::Workflow->new( $self->{session}, "default", %opts );
 
 	my @problems = ();
