@@ -100,6 +100,7 @@ sub export
 		{
 			$cmd_id = $EPrints::Plugin::Convert::PlainText::APPS{$ext};
 			last if defined $repository->get_conf( "executables", $cmd_id );
+			last if $cmd_id eq "_special";
 		}
 
 		undef $cmd_id;
